--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="favicon.ico">
         </head>
 <title>Wizard of Legend - Magical Spell Slinging Combat</title>
-    <meta name="description" content="Wizard of Legend is a fast paced dungeon crawler with rogue-like elements that emphasizes dynamic magical combat. Quick movement and even quicker use of spells will allow you to chain spells together to unleash devastating combinations against your enemies! Unlock over a hundred unique spells and discover powerful spell combinations and synergies! Dive head first into the fray or stand back and let your minions do the work for you, the choice is yours!">
+    <meta name="description" content="https://cdn.discordapp.com/attachments/985362324611272746/985367390365823067/unknown.png">
     <link rel="stylesheet" type="text/css" href="main0816.css?v1.23">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Questrial" rel="stylesheet">
     <link rel="icon" type="image/ico" href="favicon.ico">
