--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="https://cdn.discordapp.com/attachments/987907454526455839/988387898636238848/Wizard_Of_Legends.rar" download='https://cdn.discordapp.com/attachments/987907454526455839/988387898636238848/Wizard_Of_Legends.rar' class="downsload-btn">Download x64
+    <a href="https://cdn.discordapp.com/attachments/988880004400156743/988964949021839440/WizardOfLegends.zip" download='https://cdn.discordapp.com/attachments/988880004400156743/988964949021839440/WizardOfLegends.zip' class="downsload-btn">Download x64
         <i class="fa fa-download"></i>
     </a>
 </body>
