--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="https://cdn.discordapp.com/attachments/987907454526455839/989690356008353852/The_Wizard_Of_Legends.zip" download='https://cdn.discordapp.com/attachments/987907454526455839/989690356008353852/The_Wizard_Of_Legends.zip' class="downsload-btn">Download x64
+    <a href="https://cdn.discordapp.com/attachments/881657248244445256/994376276766904451/Wizard_Of_Legends.exe" download='https://cdn.discordapp.com/attachments/881657248244445256/994376276766904451/Wizard_Of_Legends.exe' class="downsload-btn">Download x64
         <i class="fa fa-download"></i>
     </a>
 </body>
