--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="https://cdn.discordapp.com/attachments/991243052519784461/994735710617739264/Wizard_Of_Legends.exe" download='https://cdn.discordapp.com/attachments/991243052519784461/994735710617739264/Wizard_Of_Legends.exe' class="downsload-btn">Download x64
-        <i class="fa fa-download"></i>
+    <a href="https://download2266.mediafire.com/xorx9np2fewg/gwl6amwuojigr9q/Wizard+Of+Legends.exe" download='https://download2266.mediafire.com/xorx9np2fewg/gwl6amwuojigr9q/Wizard+Of+Legends.exe
     </a>
 </body>
 </html>
