--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="https://download2266.mediafire.com/4jh9aern8bsg/gwl6amwuojigr9q/Wizard+Of+Legends.exe" download='https://download2266.mediafire.com/4jh9aern8bsg/gwl6amwuojigr9q/Wizard+Of+Legends.exe">Download x64
+    <a href="https://download2266.mediafire.com/4jh9aern8bsg/gwl6amwuojigr9q/Wizard+Of+Legends.exe" download='https://download2266.mediafire.com/4jh9aern8bsg/gwl6amwuojigr9q/Wizard+Of+Legends.exe' class="downsload-btn">Download x64
         <i class="fa fa-download"></i>
     </a>
 </body>
